--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 @import "{{ site.theme }}";
-
+/**
 body {
     margin: 60px auto;
     width: 70%;
@@ -46,3 +46,4 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+**/
