--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,7 @@
 body {
     margin: 60px auto;
     width: 70%;
+    background: #151515 url(../images/bkg.png) 0 0;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
